assets/css/_vehicle_map.scss
.m-vehicle-map__label {
  @include font-emph;

  svg {
    overflow: visible;
  }
}

.m-vehicle-map__icon {
  path {
    fill: $color-primary;
    stroke: $color-bg-base;
    stroke-width: 2;

    &.on-time {
      fill: $color-vehicle-ontime;
    }

    &.early {
      fill: $color-vehicle-early;
    }

    &.late {
      fill: $color-vehicle-late;
    }

    &.off-course {
      fill: $color-vehicle-off-course;
    }
  }

  svg {
    overflow: visible;
  }
}

.m-vehicle-map__route-shape:hover {
  stroke-opacity: 1;
}

.m-vehicle-map__stop {
  fill: $color-stop-fill;
  fill-opacity: 1;
  stroke: $color-stop-stroke;
  stroke-width: 1;
}

.m-vehicle-map__recenter-button {
  path {
    fill: none;
    stroke: $black;
    stroke-width: 1.8;
  }

  .m-vehicle-map--auto-centering & a {
    background-color: $color-button-disabled;
    color: $color-font-grey;

    path {
      stroke: $color-font-grey;
    }
  }
}

